@@ -1,0 +1,58 @@
+{
+   Ignore PKI_TOKEN_login
+   Memcheck:Leak
+   ...
+   fun:PKI_TOKEN_login
+   ...
+}
+
+{
+   Ignore PKI_TOKEN_init
+   Memcheck:Leak
+   ...
+   fun:PKI_TOKEN_init
+   ...
+}
+
+{
+   Ignore OCSPD Load Config
+   Memcheck:Leak
+   ...
+   fun:OCSPD_load_config
+   ...
+}
+
+{
+   Ignore LibXML2 Leaks
+   Memcheck:Leak
+   fun:malloc
+   ...
+   obj:*libxml*
+}
+
+{
+   Ignore OpenSSL Init
+   Memcheck:Leak
+   ...
+   fun:PKI_init_all
+   ...
+   obj:*libpki*
+}
+ 
+{
+   Ignore OpenSSL malloc
+   Memcheck:Leak
+   fun:malloc
+   fun:CRYPTO_malloc
+   ...
+   obj:*libcrypto*
+}
+ 
+{
+   Ignore OpenSSL realloc
+   Memcheck:Leak
+   fun:realloc
+   fun:CRYPTO_realloc
+   ...
+   obj:*libcrypto*
+}
